--- a/ProjektSemestrIV/App.xaml
+++ b/ProjektSemestrIV/App.xaml
@@ -2,8 +2,28 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ProjektSemestrIV"
+             xmlns:viewmodels="clr-namespace:ProjektSemestrIV.ViewModels"
+             xmlns:views="clr-namespace:ProjektSemestrIV.Views"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <DataTemplate DataType="{x:Type viewmodels:ConnectionViewModel}">
+            <views:ConnectionView/>
+        </DataTemplate>
+        
+        <DataTemplate DataType="{x:Type viewmodels:CompetitionsViewModel}">
+            <views:CompetitionsView/>
+        </DataTemplate>
+        
+        <DataTemplate DataType="{x:Type viewmodels:ScoreViewModel}">
+            <views:ScoreView/>
+        </DataTemplate>
+        
+        <DataTemplate DataType="{x:Type viewmodels:ShootersViewModel}">
+            <views:ShootersView/>
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type viewmodels:StagesViewModel}">
+            <views:StagesView/>
+        </DataTemplate>
     </Application.Resources>
 </Application>
