Add connection view

--- a/ProjektSemestrIV/Views/ConnectionView.xaml
+++ b/ProjektSemestrIV/Views/ConnectionView.xaml
@@ -4,10 +4,111 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ProjektSemestrIV.Views"
+             xmlns:viewmodels="clr-namespace:ProjektSemestrIV.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              Background="White">
+
     <Grid>
-        <Label Content="ConnectionView" FontSize="30"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="10"/>
+            <RowDefinition Height="auto"/>
+        </Grid.RowDefinitions>
+        
+        <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="Konfiguracja połączenia" FontSize="30"/>
+
+        <Label Grid.Row="1" Grid.Column="0" Content="Adres Serwera"/>
+        <TextBox
+            x:Name="TextBoxServerAddress" x:FieldModifier="private"
+            Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Width="100"
+            Text="{
+            Binding Path=ServerAddress,
+            Mode=TwoWay,
+            UpdateSourceTrigger=PropertyChanged,
+            RelativeSource={
+                RelativeSource Mode=FindAncestor,
+                AncestorType={x:Type UserControl}
+                }
+        }"/>
+
+        <Label Grid.Row="2" Grid.Column="0" Content="Port"/>
+        <TextBox
+            x:Name="TextBoxPort" x:FieldModifier="private"
+            Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Width="100"
+            Text="{
+            Binding Path=Port,
+            Mode=TwoWay,
+            UpdateSourceTrigger=PropertyChanged,
+            RelativeSource={
+                RelativeSource Mode=FindAncestor,
+                AncestorType={x:Type UserControl}
+                }
+        }"/>
+
+        <Label Grid.Row="3" Grid.Column="0" Content="Baza danych"/>
+        <TextBox
+            x:Name="TextBoxDatabase" x:FieldModifier="private"
+            Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Width="100"
+            Text="{
+            Binding Path=Database,
+            Mode=TwoWay,
+            UpdateSourceTrigger=PropertyChanged,
+            RelativeSource={
+                RelativeSource Mode=FindAncestor,
+                AncestorType={x:Type UserControl}
+                }
+        }"/>
+
+        <Label Grid.Row="4" Grid.Column="0" Content="Użytkownik"/>
+        <TextBox
+            x:Name="TextBoxUser" x:FieldModifier="private"
+            Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Width="100"
+            Text="{
+            Binding Path=User,
+            Mode=TwoWay,
+            UpdateSourceTrigger=PropertyChanged,
+            RelativeSource={
+                RelativeSource Mode=FindAncestor,
+                AncestorType={x:Type UserControl}
+                }
+        }"/>
+
+        <Label Grid.Row="5" Grid.Column="0" Content="Hasło"/>
+        <TextBox
+            x:Name="TextBoxPassword" x:FieldModifier="private"
+            Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Width="100"
+            Text="{
+            Binding Path=Password,
+            Mode=TwoWay,
+            UpdateSourceTrigger=PropertyChanged,
+            RelativeSource={
+                RelativeSource Mode=FindAncestor,
+                AncestorType={x:Type UserControl}
+                }
+        }"/>
+
+        <Button
+            x:Name="ButtonOK" x:FieldModifier="private"
+            Grid.Row="7" Grid.Column="1" Content="OK" HorizontalAlignment="Left" Width="50"
+            Command="{
+            Binding Path=OK,
+            Mode=TwoWay,
+            UpdateSourceTrigger=PropertyChanged,
+            RelativeSource={
+                RelativeSource Mode=FindAncestor,
+                AncestorType={x:Type UserControl}
+                }
+        }"/>
     </Grid>
 </UserControl>
