--- a/ProjektSemestrIV/App.xaml
+++ b/ProjektSemestrIV/App.xaml
@@ -7,7 +7,14 @@
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <DataTemplate DataType="{x:Type viewmodels:ConnectionViewModel}">
-            <views:ConnectionView/>
+            <views:ConnectionView
+                ServerAddress="{Binding Path=ServerAddress, Mode=TwoWay}"
+                Port="{Binding Path=Port, Mode=TwoWay}"
+                Database="{Binding Path=Database, Mode=TwoWay}"
+                User="{Binding Path=User, Mode=TwoWay}"
+                Password="{Binding Path=Password, Mode=TwoWay}"
+                OK="{Binding ConfirmData}"
+                />
         </DataTemplate>
         
         <DataTemplate DataType="{x:Type viewmodels:CompetitionsViewModel}">
