--- a/ProjektSemestrIV/App.xaml
+++ b/ProjektSemestrIV/App.xaml
@@ -7,28 +7,11 @@
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <DataTemplate DataType="{x:Type viewmodels:ConnectionViewModel}">
-            <views:ConnectionView
-                ServerAddress="{Binding Path=ServerAddress, Mode=TwoWay}"
-                Port="{Binding Path=Port, Mode=TwoWay}"
-                Database="{Binding Path=Database, Mode=TwoWay}"
-                User="{Binding Path=User, Mode=TwoWay}"
-                Password="{Binding Path=Password, Mode=TwoWay}"
-                OK="{Binding ConfirmData}"
-                />
+            <views:ConnectionView />
         </DataTemplate>
 
         <DataTemplate DataType="{x:Type viewmodels:EditShootersViewModel}">
-            <views:EditShootersView
-                ShooterName="{Binding Path=Name, Mode=TwoWay}"
-                ShooterSurname="{Binding Path=Surname, Mode=TwoWay}"
-                Add="{Binding AddShooter}"
-                OK="{Binding ConfirmShooterEdit}"
-                ItemsSource="{Binding Path=Shooters, Mode=OneWay}"
-                SelectedItem="{Binding SelectedItem, Mode=OneWayToSource}"
-                SelectedIndex="{Binding SelectedIndex, Mode=OneWayToSource}"
-                Edit="{Binding EditShooter}"
-                Delete="{Binding DeleteShooter}"
-                />
+            <views:EditShootersView/>
         </DataTemplate>
 
         <DataTemplate DataType="{x:Type viewmodels:CompetitionsViewModel}">
