--- a/ProjektSemestrIV/App.xaml
+++ b/ProjektSemestrIV/App.xaml
@@ -29,5 +29,9 @@
         <DataTemplate DataType="{x:Type viewmodels:StagesViewModel}">
             <views:StagesView/>
         </DataTemplate>
+
+        <DataTemplate DataType="{x:Type viewmodels:ShowCompetitionsViewModel}">
+            <views:ShowCompetitionsView/>
+        </DataTemplate>
     </Application.Resources>
 </Application>
