--- a/ProjektSemestrIV/MainWindow.xaml
+++ b/ProjektSemestrIV/MainWindow.xaml
@@ -27,7 +27,7 @@
             <Separator Margin="0,10,0,10" Height="0"/>
 
             <Label Content="Wyświetlanie" HorizontalAlignment="Center"/>
-            <Button Content="???" Command="" CommandParameter=""/>
+            <Button Content="Lista zawodów" Command="{Binding UpdateFormView}" CommandParameter="ShowCompetitions"/>
         </StackPanel>
         
         <ContentControl Grid.Row="0" Grid.Column="1" Content="{Binding SelectedViewModel}"/>
