--- a/ProjektSemestrIV/Views/ShowCompetitionsView.xaml
+++ b/ProjektSemestrIV/Views/ShowCompetitionsView.xaml
@@ -1,13 +1,12 @@
-﻿<UserControl x:Class="ProjektSemestrIV.Views.CompetitionsView"
+﻿<UserControl x:Class="ProjektSemestrIV.Views.ShowCompetitionsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ProjektSemestrIV.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
-             Background="White">
+             d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel>
-        <Label Content="CompetitionsView" FontSize="30"/>
+        <DataGrid x:Name="DataGridCompetitions" ItemsSource="{Binding Competitions}" IsReadOnly="True"/>
     </StackPanel>
 </UserControl>
